# flask_social_media

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: __main__.py  app.py  config.py  db.py  flask_bcrypt.pyi  plugins.py  populate.py  pyproject.toml  setup.py  visualize.py
backend/controllers/: auth.py  comment.py  following.py  post.py  user.py
backend/models/: __init__.py  auth.py  comment.py  datetime.py  mongo.py  post.py  user.py
backend/models/api/: auth.py  comment.py  error.py  following.py  mongo.py  post.py  temporal.py  user.py
backend/models/database/: comments.py  post.py  user.py
backend/models/db/: auth.py  comments.py  mongo.py  post.py  user.py
backend/routes/: __init__.py  auth.py  comment.py  comment_routes.py  following.py  post.py  post_routes.py  user.py  user_routes.py
backend/server/: __init__.py  __main__.py  app.py  config.py  db.py  model_utils.py  plugins.py
backend/server/auth/: __init__.py  controller.py  controller_model.py  view.py  view_model.py
backend/server/comments/: __init__.py  controller.py  controller_model.py  view.py  view_model.py
backend/server/followings/: __init__.py  controller.py  view.py  view_model.py
backend/server/posts/: __init__.py  controller.py  controller_model.py  view.py  view_model.py
backend/server/root/: __init__.py  view.py
backend/server/users/: controller.py  controller_model.py  view.py  view_model.py
backend/tasks/: __init__.py  format.py  gunicorn.py  lint.py  populate.py  run.py  setup.py  type_check.py  visualize.py
frontend/: .xo-config.json  fetch-openapi.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.module.css  App.tsx  async-effect.ts  index.jsx  index.tsx  user.tsx
frontend/src/components/: AuthPage.css  AuthPage.tsx  CommentView.tsx  CreateUserForm.tsx  FollowersView.tsx  FollowingsView.css  FollowingsView.tsx  FormInput.css  FormInput.tsx  LoginForm.css  LoginForm.tsx  LoginPage.tsx  PostPage.tsx  PostView.module.css  PostView.tsx  ProfilePage.css  ProfilePage.tsx  SignupForm.css  SignupForm.tsx  UserProfile.tsx  UserView.module.css  UserView.tsx
(+7 files in other folders)
