[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-openapi3[rapidoc]>=4.0.3",
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "flask-cors>=5.0.0",
    "faker>=33.1.0",
    "tqdm>=4.67.1",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "pymongo>=4.10.1",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pylint>=3.3.2",
]
